@@ -20,6 +20,7 @@ class Smarty_Internal_Write_File {
     */
     public static function writeFile($_filepath, $_contents, $smarty)
     {
+        $old_umask = umask(0);
         $_dirpath = dirname($_filepath); 
         // if subdirs, create dir structure
         if ($_dirpath !== '.' && !file_exists($_dirpath)) {
@@ -29,6 +30,7 @@ class Smarty_Internal_Write_File {
         $_tmp_file = tempnam($_dirpath, 'wrt');
 
         if (!file_put_contents($_tmp_file, $_contents)) {
+            umask($old_umask);
             throw new Exception("unable to write file {$_tmp_file}");
             return false;
         } 
@@ -39,7 +41,7 @@ class Smarty_Internal_Write_File {
         rename($_tmp_file, $_filepath); 
         // set file permissions
         chmod($_filepath, $smarty->_file_perms);
-
+        umask($old_umask);
         return true;
     } 
 } 
